--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html { box-sizing: border-box; }
 
 body {
     background-color:#616161;
-    line-height: 1.5;
+    line-height: 1.4;
     font-family: Montserrat;
     font-weight: 500;
     font-size: 16px;
@@ -24,11 +24,12 @@ h1 {
 h2 {
     font-size: 40px;
     color: white;
+    line-height: 1.2;
 }
 
 h3 {
     font-size: 25px;
-    color: #3619b6;
+    color: #616161;
     text-align: center;
     line-height: 1;
 }
@@ -36,7 +37,6 @@ h3 {
 h1, h2, h3 {
     font-family: Montserrat;
 }
-
 
 #foto {
     width: 250px;
@@ -49,7 +49,7 @@ h1, h2, h3 {
     padding: 20px 20px 20px 180px;
     margin-top: 30px;
     margin-bottom: 30px;
-    background-color: #FFD900;
+    background-color: #FFC233;
     border-radius: 0 145px 145px 0;
     float: left;
 }
@@ -79,7 +79,7 @@ h1, h2, h3 {
 }
 
 .socky {
-    background-color: #ffe65a;
+    background-color: #ffd980;
     color: black;
     padding: 4px 10px;
     border-radius: 10px;
@@ -88,7 +88,7 @@ h1, h2, h3 {
 }
 
 .socky:hover {
-    background-color: #FFD900;
+    background-color: #FFC233;
     color: white;
 }
 
@@ -130,39 +130,54 @@ td {
 }
 
 #nadpis-soc h2 {
-    text-align: left;
+    text-align: center;
 }
 
 #nadpis-web {
-    background-color: #FFD900;
+    background-color: #FFC233;
     border-radius: 0 0 0 50px;
     border-left: 10px solid white;
     padding: 0 30px;
 }
 
 #nadpis-web h2 {
-    text-align: right;
+    text-align: center;
 }
 
 .nadpis-zivotopis {
-    background-color: #white;
+    background-color: white;
     border-radius: 40px;
     border-left: 10px solid white;
 }
 
 .bunka-soc {
     background-color: #FF5348;
-    padding: 10px 30px;
+    padding: 5px 30px;
     border-radius: 0 50px 50px 0;
     border-right: 10px solid white;
+    vertical-align: top;
 }
 
 .bunka-web {
-    background-color: #FFD900;
-    padding: 10px 30px;
+    background-color: #FFC233;
+    padding: 5px 30px;
     border-radius: 50px 0 0 50px;
     border-left: 10px solid white;
-    text-align: right;
+    vertical-align: top;
+}
+
+.odk-ziv {
+    background-color: #616161;
+    color: white;
+    padding: 2px 8px;
+    border-radius: 10px;
+    text-decoration: none;
+    transition: color 0.5s, background-color 0.5s;
+}
+
+.odk-ziv:hover {
+    background-color: #FF5348;
+    color: black;
 }
 
 #dov-soc {
@@ -175,6 +190,15 @@ td {
 
 table {
     border-spacing: 0;
+}
+
+.pozice {
+    font-style: italic;
+    color: white;
+    font-size: 14px;
+    margin-left: 15px;
+    margin-top: -13px;
+    
 }
 
 #o-mne {
